--- a/src/routes/login/Login.module.css
+++ b/src/routes/login/Login.module.css
@@ -1,7 +1,7 @@
 .login_container {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     width: 100%;
-    max-width: 900px;
+    max-width: 300px;
     position: relative;
     height: 100vh;
 }
@@ -9,13 +9,13 @@
 .login_fromWrapper {
     width: 300px;
     margin: 0 auto;
-    top: 50%;
+    /* top: 50%; */
     position: relative;
-    transform: translate(0, -50%);
+    /* transform: translate(0, -50%); */
 }
 
 .login_title {
     font-size: 30px;
-    color: #000;
+    color: #fff;
     text-align: center;
 }
